--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@
     flex-wrap: wrap;
 }
 
+
 .logo{
     width:230px;
     /* background-color: rgba(233, 145, 57, 0.67); */
@@ -42,7 +43,7 @@
 .res-card{
     padding:5px;
     width:250px;
-    height:400px;
+    height:510px;
     background-color: rgba(250, 245, 240, 0.67);
 }
 .res-card:hover{
@@ -65,4 +66,5 @@
 }
 .food-img{
     width:100%;
+    height:45%
 }
