Files added in src folder

--- a/index.css
+++ b/index.css
@@ -12,7 +12,8 @@
 
 
 .logo{
-    width:230px;
+    width:200px;
+    height:160px;
     /* background-color: rgba(233, 145, 57, 0.67); */
 }
 .nav-item{
