--- a/index.css
+++ b/index.css
@@ -69,3 +69,11 @@
     width:100%;
     height:45%
 }
+
+.filter-btn{
+    margin:20px;
+    margin-left: 20px;
+    font-size: large;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    cursor: pointer;
+}
