--- a/index.css
+++ b/index.css
@@ -71,9 +71,41 @@
 }
 
 .filter-btn{
-    margin:20px;
-    margin-left: 20px;
+    margin:28px;
+    margin-left: 100px;
     font-size: large;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     cursor: pointer;
+    width:250px;
+    height:35px;
+    border-radius: 25px;
+}
+.Login{
+   width: 100px;
+   height:35px;
+   border-radius: 30px;
+   margin-top: 5px;
+   margin-left: 15px;
+   background-color: white;
+   font-size: large;
+   cursor:pointer;
+}
+.search{
+    border:none;
+    display:flex;
+    margin-top:20px;
+
+}
+.filter{
+    display: flex;
+}
+.search button{
+    font-size: large;
+    height:30px;
+    border-radius: 25px;
+    cursor:pointer;
+}
+.search-box{
+    border-radius: 10px;
+    font-size: large;
 }
