Recent files added

--- a/index.css
+++ b/index.css
@@ -21,18 +21,23 @@
     margin-top: 30px;
     margin-right: 100px;
     justify-content: space-between;
-
+    text-decoration: none;
 }
+
 .nav-item>ul{
     font-size: 22px;
     display:flex;
     list-style-type: none;
+    
 }
+
 .nav-item>ul>li{
     padding:10px;
     margin:10px; 
     justify-content: space-between;
+    /* text-decoration: none; */
 }
+
 .nav-item>ul>li {
     color: rgb(0, 0, 0);
     text-decoration: none;
@@ -40,7 +45,9 @@
     border-radius: 1rem;
     padding: 0 1rem;
     transition: all 800ms;
+    /* text-decoration: none; */
 }
+
 .res-card{
     padding:5px;
     width:250px;
@@ -51,6 +58,10 @@
     cursor:pointer;
     /* border:1px solid black; */
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+.res-card .card-link{
+    text-decoration: none;
+    color:black;
 }
 .search{
     padding:10px;
@@ -121,3 +132,22 @@
     height: 100vh;
     background-color: rgba(247, 209, 170, 0.67);
 }
+.error-section {
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
+    height: 100vh;           
+    flex-direction: column;  
+}
+  
+.error-section img {
+    max-width: 100%;
+    height: 400px;            
+}
+
+.user-card{
+    padding:10px;
+    border:2px solid rgb(184, 182, 182)
+}
+  
+  
